--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,8 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
+# Não subir o 'node_module' se n fudeo e o 'dist'
+node_modules 
 dist
 dist-ssr
 *.local
